--- a/docs/latex/bibliografiaAnexos.bib
+++ b/docs/latex/bibliografiaAnexos.bib
@@ -37,7 +37,7 @@
 
 @misc{ wiki:versionAndroid,
     author = "Wikipedia",
-    title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+    title = "Versiones de Android",
     year = "2020",
     url = {https://en.wikipedia.org/w/index.php?title=Android_version_history&oldid=967286357},
     note = "[]"
@@ -45,7 +45,7 @@
 
 @misc{ wiki:pegi,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Sistema de calificación de vieojuegos",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Sistema_de_clasificaci%C3%B3n_de_contenido_de_videojuegos},
 	note = "[]"
@@ -53,7 +53,7 @@
 
 @misc{ wiki:portafolio,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Portafolio Digital",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Portafolio_digital},
 	note = "[]"
@@ -62,7 +62,7 @@
 
 @misc{ wiki:nosql,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Base de datos nosql",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/NoSQL#Bases_de_datos_tabular},
 	note = "[]"
@@ -70,7 +70,7 @@
 
 @misc{ package:sqlflite,
 	author = "pub dev",
-	title = "MIT",
+	title = "sqlflite",
 	year = "2020",
 	url = {https://pub.dev/packages/sqflite},
 	note = "[]"
@@ -78,7 +78,7 @@
 
 @misc{ wiki:mongodb,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "MongoDB",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/MongoDB},
 	note = "[]"
@@ -86,7 +86,7 @@
 
 @misc{ wiki:sha1,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Secure Hash Algorithm",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Secure_Hash_Algorithm},
 	note = "[]"
@@ -135,7 +135,7 @@
 
 @misc{ wiki:bundle,
 	author = "Wikipedia",
-	title = "Licencia --- Wikipedia{,} The Free Encyclopedia",
+	title = "Bundle",
 	year = "2020",
 	url = {https://es.wikipedia.org/wiki/Empaquetado_de_aplicaciones},
 	note = "[]"
@@ -148,5 +148,15 @@
 	url = {http://xurxodev.com/introduccion-al-patron-bloc/},
 	note = "[]"
 }
+
+@misc{ xurxodev:smi,
+	author = "",
+	title = "Slario mínimo interprofesional",
+	year = "2020",
+	url = {https://www.afiris.es/salario-minimo-interprofesional/},
+	note = "[]"
+}
+
+
 
 
