--- a/docs/latex/tex/A_Plan_proyecto.tex
+++ b/docs/latex/tex/A_Plan_proyecto.tex
@@ -169,8 +169,7 @@ El día 20 de Julio, día de la entrega se tiene que hacer la reunión final de 
 
 Las diferentes \emph{issues} se encuentran en \href{https://github.com/scc0034/flutter_serpiente/milestone/6?closed=1}{Sprint 6}
 
-\imagen{burndowns/sp5.png}{Sprint 6. FALTA FALTA FALTA FALTA FALTA FALTA FALTA FATAL}
-
+\imagen{burndowns/sp1.png}{Sprint 6. }
 Para el cierre de este \emph{sprint} todas las tareas fueron completadas, ya que también era el cierre del proyecto. El número de horas que se destinaron para este fueron de 38.
 
 
@@ -182,12 +181,12 @@ En esta parte se pretende analizar el coste / beneficio de todo el proyecto, com
 \subsection{Viabilidad económica}
 La estructura de mi trabajo, es la de un proyecto con precio cerrado, es decir, no soy un trabajador asalariado, sino autónomo, que recibe un encargo, en este caso por parte de la Universidad. La definición que encaja para esto es la de \emph{freelancer},~\cite{noauthor_freelancercom_2020}. Por lo que el coste dependerá de la estimación inicial de las horas del proyecto, así como de otros costes que conozcamos de ante mano, finalmente se incluye un porcentaje de beneficios. En mi caso la estimación inicial de las horas fue de 250 horas.
 
-Otra de las vías para obtener ingresos es mediante los anuncios ofrecidos por \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y vídeos con los que tener un retorno de dinero. La idea es que la aplicación este disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. 
+Otra de las vías para obtener ingresos es mediante los anuncios ofrecidos por \emph{Google Ad}, a través de diferentes tipos de \emph{banners} y vídeos con los que tener un retorno de dinero. La idea es que la aplicación esté disponible de manera gratuita, en la \emph{play store} para todos aquellos que se la quieran descargar. 
 
 Aunque la app disponga de publicidad, se desestimará para el cálculo del beneficio, ya que es complicado tener una gran repercusión en las primeras etapas de proyecto, o incluso una vez finalizado. 	
 
 \subsubsection{Coste hardware}
-Se desglosa el coste de los dispositivos usados para la implementación, suponiendo que la amortización del pc de sobremesa es aproximadamente de 5 años y de 2 años para el \emph{smartphone}, con la duración del proyecto de 1 mes.
+Se desglosa el coste de los dispositivos usados para la implementación, suponiendo que la amortización del PC de sobremesa es aproximadamente de 5 años y de 2 años para el \emph{smartphone}, con la duración del proyecto de 1 mes.
 
 \begin{table}[H]
 	\begin{center}
@@ -222,7 +221,7 @@ El proyecto fue llevado por un solo trabajador (Samuel Casal Cantero), ya que es
 	\end{center}
 \end{table}
 
-En lo referente a las cuotas de la seguridad social, para el año 2020, tenemos que la cuota mínima a pagar es el resultado de aplicar el 30,3\% al salario mínimo interporfesional, que es de 944,4 €, dando lugar a que esta cuota sea de 286,15 €. Dependiendo de la contingencia el desglose es:
+En lo referente a las cuotas de la seguridad social, para el año 2020, tenemos que la cuota mínima a pagar es el resultado de aplicar el 30,3\% al salario mínimo interprofesional~\cite{xurxodev:smi} que es de 944,4 €, dando lugar a que esta cuota sea de 286,15 €. Dependiendo de la contingencia el desglose es:
 
 \begin{table}[H]
 	\begin{center}
@@ -284,8 +283,8 @@ Haciendo la suma de las horas destinadas en cada uno de los \emph{sprints}, vemo
 			Sprint 2, ver pág.~\pageref{sprint-1-270620---010720}					    & 45    		\\
 			Sprint 3, ver pág.~\pageref{sprint-3-020720---070720}					    & 44,5  		\\
 			Sprint 4, ver pág.~\pageref{sprint-4-070720---100720}					    & 33     		\\
-			Sprint 5,ver pág.~\pageref{sprint-5-11072020---15072020}	& 41     			    		\\
-			Sprint 6,ver pág.~\pageref{sprint-6-16072020---20072020}					    & 38    		\\  \hline
+			Sprint 5, ver pág.~\pageref{sprint-5-11072020---15072020}	& 41     			    		\\
+			Sprint 6, ver pág.~\pageref{sprint-6-16072020---20072020}					    & 38    		\\  \hline
 			Horas totales            	 		& 247			\\ \hline
 		\end{tabular}
 		\caption{Horas del proyecto}
@@ -307,7 +306,7 @@ Para calcular todos los beneficios debemos de ver la diferencia entre el coste t
 	\item Diferencia = 6912,82  € - 5951,15 € = 961.67 €.
 \end{itemize}
 
-Recalcar que las horas como freelance también son beneficios, pero personales, ya que soy el encargado de ejecutar el trabajo final de grado. Pero que para el proyecto imputan como costes.
+Hay que recalcar que las horas como freelance también son beneficios, pero personales, ya que soy el encargado de ejecutar el trabajo final de grado. Pero que para el proyecto imputan como costes.
 
 \textbf{Los beneficios a fecha 20/07/2020: +961.67 €}
 
@@ -325,13 +324,13 @@ Para el completar el proyecto han sido necesarias gran multitud de herramientas,
 		VsCode        & 1.46.1  & \begin{tabular}[c]{@{}l@{}}Editor de código.\\  \end{tabular} & MIT\\ 
 		Android Studio & 	4.0 & \begin{tabular}[c]{@{}l@{}}App virtualización \\del SO Android.\\  \end{tabular} & Apache 2.0\\
 		Android R  & 10.0+ Api 30 & \begin{tabular}[c]{@{}l@{}}Versión del S.O \\virtualizado.\\  \end{tabular} & Apache 2.0\\
-		Flutter    & 1.17    & \begin{tabular}[c]{@{}l@{}}Framework usado en\\ desarollar la app\end{tabular}                     
+		Flutter    & 1.17    & \begin{tabular}[c]{@{}l@{}}Framework usado en\\ desarrollar la app\end{tabular}                     
 		& BSD 3-Clause \\
 		Dart    & 2.2.0    & \begin{tabular}[c]{@{}l@{}}Lenguaje prog.\\ desarrollado por Google\end{tabular}                     
 		& BSD \\
 		Node.js    & 12.18    & \begin{tabular}[c]{@{}l@{}}Uso de npm\\ \end{tabular}                     
 		& MIT \\
-		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión sercios.\end{tabular}                     
+		Firebase console    & 5.5    & \begin{tabular}[c]{@{}l@{}}Herramienta de Google\\ gestión servicios.\end{tabular}                     
 		& Gratis \\
 		Play Store console    & --    & \begin{tabular}[c]{@{}l@{}}Backend developers\\ tienda apps\end{tabular}                     
 		& \begin{tabular}[c]{@{}l@{}}Licencia \\ pagada\end{tabular}  \\
@@ -375,7 +374,7 @@ Aclarar que de las herramientas anteriores, las dos que aparecen como licencia g
 \end{table}
 
 \subsection{Herramientas}
-En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalidades que ya han sido implementadas. Todas ellas se pueden encontrar en la siguiente \href{https://pub.dev/}{web}. Estos se integran en el fichero pubspec.yaml, siendo este muy importante. Para el proyecto se usaron: 
+En Flutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalidades que ya han sido implementadas. Todas ellas se pueden encontrar en la siguiente \href{https://pub.dev/}{web}. Estos se integran en el fichero \texttt{pubspec.yaml}, siendo este muy importante. Para el proyecto se usaron: 
 
 
 \begin{table}[H]
@@ -385,7 +384,7 @@ En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalida
 		\toprule
 		Librería     & Versión & Descripción                                                     & Licencia                \\ 	\midrule	
 		shared preferences        & 0.5.6  & \begin{tabular}[c]{@{}l@{}}Persistencia datos.\\  \end{tabular} & BSD\\ 
-		flutter email sender & 	3.0.1 & \begin{tabular}[c]{@{}l@{}}Envio correos\\  \end{tabular} & Apache 2.0\\
+		flutter email sender & 	3.0.1 & \begin{tabular}[c]{@{}l@{}}Envió correos\\  \end{tabular} & Apache 2.0\\
 		url launcher  & 5.4.9 & \begin{tabular}[c]{@{}l@{}}Abrir navegador.\\  \end{tabular} & Apache 2.0\\
 		flutter phone state    & 0.5.9    & \begin{tabular}[c]{@{}l@{}}Abrir app llamadas\end{tabular}                     
 		& MIT \\
@@ -422,7 +421,7 @@ En FLutter son conocidos como \emph{packages}, paquetes que ofrecen funcionalida
 \end{table}
 
 \subsection{Licencia aplicación}
-Estudiando todas las compatibilidades de las licencias, donde más problemas encontramos es en la licencia Apache 2.0, ya que es de las más restrictivas. No impide la comercialización (free-to-play), que es justo lo que se pretende, pero en el caso de que modifique el código fuente de algunas de las herramientas, si que tendría más problemas, pero no se da el caso, ya que solo se usan.
+Estudiando todas las compatibilidades de las licencias, donde más problemas encontramos es en la licencia Apache 2.0, ya que es de las más restrictivas. No impide la comercialización (~\emph{free-to-play}), que es justo lo que se pretende, pero en el caso de que modifique el código fuente de algunas de las herramientas, si que tendría más problemas, pero no se da el caso, ya que solo se usan.
 
 Revisando los juegos hay que detenerse en:
 
