--- a/docs/latex/tex/B_Requisitos.tex
+++ b/docs/latex/tex/B_Requisitos.tex
@@ -22,7 +22,7 @@ Algunos de los requisitos funcionales, en el momento de ser tratados con el clie
 \begin{figure}[H]
 	\centering
 	\includegraphics[height=0.82\textwidth]{requisitos/bocetolog.jpeg}
-	\caption{Boceto sing in}\label{fig:bocetolog}
+	\caption{Boceto sign in}\label{fig:bocetolog}
 \end{figure}
 
 \begin{itemize}
@@ -32,7 +32,7 @@ Algunos de los requisitos funcionales, en el momento de ser tratados con el clie
 	
 	\begin{itemize}
 	\tightlist
-	\item \textbf{RF-1.1 Botón de inicio sesión:} Mediante un elemento clickable se debe de tener acceso a un formulario para poder entrar mediante la cuenta de \emph{Google}.
+	\item \textbf{RF-1.1 Botón de inicio sesión:} Mediante un elemento \emph{clickable} se debe de tener acceso a un formulario para poder entrar mediante la cuenta de \emph{Google}.
 	\item \textbf{RF-1.2 Consultar la política de privacidad:} Un enlace en el que se pueda mostrar todo lo referente a la política de privacidad.
 	\item \textbf{RF-1.3 Cerrar sesión:} ser capaz de salir de la aplicación \emph{sign out}, desde cualquier ventana.
 	\end{itemize}
@@ -61,7 +61,7 @@ Algunos de los requisitos funcionales, en el momento de ser tratados con el clie
 	
 	\begin{itemize}
 		\tightlist
-		\item \textbf{RF-4.1 Mostrar carousel imágenes:} enseñar al usuario fotografías de los lenguajes de programación que el creador de la aplicación conoce.
+		\item \textbf{RF-4.1 Mostrar carrusel imágenes:} enseñar al usuario fotografías de los lenguajes de programación que el creador de la aplicación conoce.
 		\item \textbf{RF-4.2 Consultar mediante \emph{iconbuttons}:} unos botones que redirijan a contenido relevante del creador.
 	\end{itemize}
 	
@@ -139,7 +139,7 @@ A continuación se muestra el diagrama de casos de uso\ref{fig:diagramauso}:
 	Descripción                            & \multicolumn{2}{p{10.25cm}}{Permite al usuario acceder a la aplicación mediante su cuenta de Google. Como consultar la política de privacidad.} \\\hline
 	Requisitos                         	   & \multicolumn{2}{p{10.25cm}}{RF-1, RF-1.1, RF-1.2} \\\cline{1-3}Precondiciones                         &  \multicolumn{2}{p{10.25cm}}{Tener la aplicación descargada en el terminal}   \\\hline
 	\multirow{2}{3.5cm}{Secuencia normal}  & Paso & Acción \\\cline{2-3}
-	& 1    & EL usuario clicka en 'Privacy policy'.
+	& 1    & EL usuario ~\emph{clicka} en `Privacy policy'.
 	\\\cline{2-3}
 	& 2    & Se muestra el navegador con la política.
 	\\\cline{2-3}
